Change to direct use of MSVC in CMake (instead of comparing strings)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,7 +42,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(CMAKE_GENERATED_SOURCE_DIR ${CMAKE_BINARY_DIR}/parser)
 
-if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+if(MSVC)
 
     set(WINDOWS_DEP_PATH ${PROJECT_BINARY_DIR}/deps)
 
@@ -186,7 +186,7 @@ if(NOT ENABLE_BUILD_WARNINGS)
     )
 endif()
 
-if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+if(MSVC)
 
     if(CMAKE_BUILD_TYPE STREQUAL "Debug")
         add_compile_options("/Od")
