Fix order of evaluation for non-cache on Ubuntu

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -51,7 +51,7 @@ jobs:
         #   cl : Command line warning D9025: overriding '/external:W4' with '/external:W0'
         # Once the runner is updated, this step can be eliminated
       - name: Setup cmake on Windows to 3.20.4
-        if: ${{ !steps.cache.outputs.cache-hit && matrix.os == 'windows-latest' }}
+        if: ${{ matrix.os == 'windows-latest' && !steps.cache.outputs.cache-hit }}
         uses: jwlawson/actions-setup-cmake@v1.9
 
       - name: Create build directory
