--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -15,13 +15,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Cache Build
-        id: cache
-        uses: actions/cache@v2
-        with:
-          path: /c/hostedtoolcache/windows/cmake
-          key: ${{ runner.os }}-cmake
-
       - name: Setup Ubuntu
         shell: bash
         if: ${{ matrix.os == 'ubuntu-latest' }}
@@ -50,12 +43,11 @@ jobs:
         #   cl : Command line warning D9025: overriding '/external:W4' with '/external:W0'
         # Once the runner is updated, this step can be eliminated
       - name: Setup cmake on Windows to 3.20.4
-        if: ${{ matrix.os == 'windows-latest' && !steps.cache.outputs.cache-hit }}
+        if: ${{ matrix.os == 'windows-latest' }}
         uses: jwlawson/actions-setup-cmake@v1.9
 
       - name: Create build directory
         shell: bash
-        # if: ${{ !steps.cache.outputs.cache-hit }}
         run: mkdir build
 
       - name: CMake Setup on Windows
