Add MTT flag to any place where build happens

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -74,6 +74,7 @@ jobs:
         shell: bash
         working-directory: build
         run: |
+          export UseMultiToolTask=true
           cmake --build . --config Release
 
       - name: Install on Windows
