Experiment with Ninja as generated on Windows

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -47,7 +47,7 @@ jobs:
         working-directory: build
         run: |
           export UseMultiToolTask=true
-          cmake ..
+          cmake .. -G Ninja
 
       - name: CMake Setup on Ubuntu/macOS
         shell: bash
