--- a/.github/workflows/ClangBuildAnalyzer.yml
+++ b/.github/workflows/ClangBuildAnalyzer.yml
@@ -44,7 +44,7 @@ jobs:
         shell: bash
         working-directory: build
         run: |
-          cmake .. -G Ninja -DSRCML_BUILD_USEPCH=ON
+          cmake .. -G Ninja -DCLANG_TIME_TRACE=ON
 
       - name: Build
         shell: bash
