--- a/.github/workflows/ClangBuildAnalyzer.yml
+++ b/.github/workflows/ClangBuildAnalyzer.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           mkdir build
 
-      - name: CMake Setup
+      - name: CMake Setup PCH On
         shell: bash
         working-directory: build
         run: |
@@ -56,12 +56,42 @@ jobs:
         shell: bash
         working-directory: build
         run: |
-          ClangBuildAnalyzer --all src/parser capture_parser
-          ClangBuildAnalyzer --analyze capture_parser > capture_parser.txt
-          ClangBuildAnalyzer --all src/libsrcml capture_libsrcml
-          ClangBuildAnalyzer --analyze capture_libsrcml > capture_libsrcml.txt
-          ClangBuildAnalyzer --all src/client capture_client
-          ClangBuildAnalyzer --analyze capture_client > capture_client.txt
+          ClangBuildAnalyzer --all src/parser capture_nopch_parser
+          ClangBuildAnalyzer --analyze capture_pch_parser > capture_pch_parser.txt
+          ClangBuildAnalyzer --all src/libsrcml capture_pch_libsrcml
+          ClangBuildAnalyzer --analyze capture_pch_libsrcml > capture_pch_libsrcml.txt
+          ClangBuildAnalyzer --all src/client capture_pch_client
+          ClangBuildAnalyzer --analyze capture_pch_client > capture_pch_client.txt
+          ClangBuildAnalyzer --all . capture_pch
+          ClangBuildAnalyzer --analyze capture_pch > capture_pch.txt
+
+
+      - name: CMake Setup PCH Off
+        shell: bash
+        working-directory: build
+        run: |
+          cmake .. -G Ninja -DCLANG_TIME_TRACE=OFF
+
+      - name: Build
+        shell: bash
+        working-directory: build
+        run: |
+          cmake --build . --config Release clean
+          cmake --build . --config Release
+
+      - name: Analyze
+        shell: bash
+        working-directory: build
+        run: |
+          ClangBuildAnalyzer --all src/parser capture_nopch_parser
+          ClangBuildAnalyzer --analyze capture_nopch_parser > capture_nopch_parser.txt
+          ClangBuildAnalyzer --all src/libsrcml capture_nopch_libsrcml
+          ClangBuildAnalyzer --analyze capture_nopch_libsrcml > capture_nopch_libsrcml.txt
+          ClangBuildAnalyzer --all src/client capture_nopch_client
+          ClangBuildAnalyzer --analyze capture_nopch_client > capture_nopch_client.txt
+          ClangBuildAnalyzer --all . capture_nopch
+          ClangBuildAnalyzer --analyze capture_nopch > capture_nopch.txt
+
       - uses: actions/upload-artifact@v2
         with:
           name: Capture
