Change order of CMake add_subdirectory()

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -35,12 +35,15 @@ endif()
 
 set(SRCML_LIBRARIES ${LibArchive_LIBRARIES} ${CURL_LIBRARIES}
                 CACHE INTERNAL "Libraries needed to build srcml")
-if(NOT WIN32 AND APPLE)
-    list(APPEND SRCML_LIBRARIES pthread)
+
+message("LIBSRCML_LIBRARIES: ${LIBSRCML_LIBRARIES}")
+if(APPLE)
+    # list(APPEND SRCML_LIBRARIES pthread)
 elseif(NOT WIN32)
-    list(APPEND SRCML_LIBRARIES crypto pthread)
-elseif(NOT CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    list(APPEND SRCML_LIBRARIES ws2_32 crypto)
+    list(APPEND SRCML_LIBRARIES pthread)
+    # list(APPEND SRCML_LIBRARIES crypto pthread)
+# elseif(NOT CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+#     list(APPEND SRCML_LIBRARIES ws2_32 crypto)
 else()
     list(APPEND SRCML_LIBRARIES ws2_32 ${LIBSRCML_LIBRARIES})
 endif()
