--- a/.github/workflows/TestParser.yml
+++ b/.github/workflows/TestParser.yml
@@ -56,6 +56,7 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         working-directory: build
         run: |
+          export UseMultiToolTask=true
           cmake ..
           cmake --build . --config Release --target install
 
