Add debugging statement for PWD in GitHub action

--- a/.github/workflows/TestFedora.yml
+++ b/.github/workflows/TestFedora.yml
@@ -21,6 +21,7 @@ jobs:
         working-directory: dist
         shell: bash
         run: |
+          echo "PWD: " "$(PWD)"
           docker run -v "$(PWD)"/..:/Source -v "$(PWD)":/Dist srcml/fedora_x86_64_base:latest bash -c "mkdir /Build; cd /Build; cmake /Source -G Ninja;ninja install;ctest;cpack -G RPM; cp dist/*.rpm /Dist/."     # - name: Setup Ubuntu
 
       - uses: actions/upload-artifact@v2
