--- a/package/CMakeLists.txt
+++ b/package/CMakeLists.txt
@@ -19,6 +19,9 @@
 # 
 # CMake files for packages
 
+# strip executables when packaged
+set(CPACK_STRIP_FILES TRUE)
+
 # Client component, SRCML, is just one component so it appears as on item
 # for installers that let you pick what to install
 # Development group, SRCMLDEV, is composed of multiple components
