Use path wildcard to upload only the rpms

--- a/.github/workflows/TestFedora.yml
+++ b/.github/workflows/TestFedora.yml
@@ -47,7 +47,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: FedoraDist
-          path: build/dist/*
+          path: **.rpm
 
       # - name: Run docker image
       #   working-directory: dist
