--- a/.github/workflows/TestFedora.yml
+++ b/.github/workflows/TestFedora.yml
@@ -7,19 +7,18 @@ jobs:
   build:
     strategy:
       matrix:
-        tag: [latest]
+        tag: [rawhide,35,latest,34,33,32]
     runs-on: ubuntu-latest
-    container: srcml/fedora_base:${{ matrix.tag }}
+    container: srcml/fedora:${{ matrix.tag }}
     timeout-minutes: 10
     steps:
 
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Debug
+      - name: OS Version
         shell: bash
         run: |
-          ls -lh
           cat /etc/os-release
 
       - name: Create build directory
