--- a/.github/workflows/TestFedora.yml
+++ b/.github/workflows/TestFedora.yml
@@ -4,7 +4,7 @@ name: Test Fedora
 on: workflow_dispatch
 
 jobs:
-  build:
+  package:
     strategy:
       matrix:
         tag: [rawhide, 35, latest, 34, 33, 32]
@@ -47,3 +47,20 @@ jobs:
         with:
           name: FedoraDist
           path: build/dist/*.rpm
+
+  test:
+    strategy:
+      matrix:
+        tag: [rawhide, 35, latest, 34, 33, 32]
+    runs-on: ubuntu-latest
+    needs: package
+    container: srcml/fedora:${{ matrix.tag }}
+    timeout-minutes: 10
+    steps:
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: my-artifact
+
+      - name: Display structure of downloaded files
+        run: ls -R
