Add testing steps to Test Fedora action

--- a/.github/workflows/TestFedora.yml
+++ b/.github/workflows/TestFedora.yml
@@ -48,19 +48,63 @@ jobs:
           name: FedoraDist
           path: build/dist/*.rpm
 
-  test:
-    strategy:
-      matrix:
-        tag: [rawhide, 35, latest, 34, 33, 32]
-    runs-on: ubuntu-latest
-    needs: package
-    container: srcml/fedora:${{ matrix.tag }}
-    timeout-minutes: 10
-    steps:
+      - name: Install using packages
+        shell: bash
+        run: |
+          dnf install -y build/dist/*.rpm
 
-      - uses: actions/download-artifact@v2
+      - name: Run Installed srcml
+        shell: bash
+        working-directory: build
+        run: |
+          srcml --version
+          srcml --text="int a;" -l C++
+
+      - name: Client Tests on Installed srcml
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          ctest -VV
+      - uses: actions/upload-artifact@v2
         with:
-          name: FedoraDist
+          name: ClientTest.${{ runner.os }}.log
+          path: build/Testing/Temporary/LastTest.log
 
-      - name: Display structure of downloaded files
-        run: ls -R
+      - name: Build libsrcml Tests
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          cmake .. -DBUILD_LIBSRCML_TESTS=ON
+          cmake --build . --config Release --target build_libsrcml_tests
+
+      - name: Run libsrcml Tests on Installed libsrcml
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          ctest -R ^test_
+      - uses: actions/upload-artifact@v2
+        with:
+          name: libsrcmlTest.${{ runner.os }}.log
+          path: build/Testing/Temporary/LastTest.log
+
+      - name: Generate Parser Tests
+        shell: bash
+        working-directory: build
+        run: |
+          cmake .. -DBUILD_PARSER_TESTS=ON
+          cmake --build . --config Release --target gen_parser_tests
+
+      - name: Run Parser Tests
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          srcml --dev --parser-test test/parser/testsuite | tee ParserTest.log
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ParserTest.${{ runner.os }}.log
+          path: build/ParserTest.log
