--- a/.github/workflows/TestFedora.yml
+++ b/.github/workflows/TestFedora.yml
@@ -4,117 +4,112 @@ name: Test Fedora
 on: workflow_dispatch
 
 jobs:
-  build:
+  package:
+    strategy:
+      matrix:
+        distribution: [fedora:rawhide,
+                       fedora:35,
+                       fedora:latest,
+                       fedora:34,
+                       fedora:33,
+                       fedora:32]
     runs-on: ubuntu-latest
+    container: srcml/${{ matrix.distribution }}
     timeout-minutes: 10
     steps:
 
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Run docker image
+      - name: OS Version
         shell: bash
         run: |
-          mkdir dist
+          cat /etc/os-release
 
-      - name: Run docker image
-        working-directory: dist
+      - name: Create build directory
         shell: bash
+        run: mkdir build
+
+      - name: CMake Setup
+        shell: bash
+        working-directory: build
         run: |
-          docker run -v "$(PWD)"/..:/Source -v "$(PWD)":/Dist srcml/fedora_x86_64_base:latest bash -c "mkdir /Build; cd /Build; cmake /Source -G Ninja;ninja install;ctest;cpack -G RPM; cp dist/*.rpm /Dist/."     # - name: Setup Ubuntu
+          cmake .. -G Ninja
+
+      - name: Build
+        shell: bash
+        working-directory: build
+        run: |
+          ninja
+
+      - name: Package
+        shell: bash
+        working-directory: build
+        run: |
+          cpack -G RPM
 
       - uses: actions/upload-artifact@v2
         with:
           name: FedoraDist
-          path: dist/*
+          path: build/dist/*.rpm
 
-      #   shell: bash
-      #   run: |
-      #     sudo apt install antlr libantlr-dev libantlr-java libarchive-dev \
-      #                      libcurl4-openssl-dev libxml2-utils libxslt1-dev \
-      #                      ninja-build
-      #     curl -L http://www.sdml.cs.kent.edu/build/srcML-1.0.0-Boost.tar.gz | \
-      #         sudo tar xz -C /usr/local/include
+      - name: Install using packages
+        shell: bash
+        run: |
+          dnf install -y build/dist/*.rpm
 
-      # - name: Create build directory
-      #   shell: bash
-      #   run: mkdir build
+      - name: Run Installed srcml
+        shell: bash
+        working-directory: build
+        run: |
+          srcml --version
+          srcml --text="int a;" -l C++
 
-      # - name: CMake Setup on Ubuntu/macOS
-      #   shell: bash
-      #   if: ${{ matrix.os != 'windows-latest' }}
-      #   working-directory: build
-      #   run: |
-      #     cmake .. -G Ninja
+      - name: Client Tests on Installed srcml
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          ctest -VV
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ClientTest.${{ matrix.distribution }}.log
+          path: build/Testing/Temporary/LastTest.log
 
-      # - name: Build
-      #   shell: bash
-      #   working-directory: build
-      #   run: |
-      #     export UseMultiToolTask=true
-      #     cmake --build . --config Release
+      - name: Build libsrcml Tests
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          cmake .. -DBUILD_LIBSRCML_TESTS=ON
+          cmake --build . --config Release --target build_libsrcml_tests
 
-      # - name: Install on Ubuntu/macOS
-      #   shell: bash
-      #   if: ${{ matrix.os != 'windows-latest' }}
-      #   working-directory: build
-      #   run: |
-      #     sudo cmake --build . --config Release --target install
+      - name: Run libsrcml Tests on Installed libsrcml
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          ctest -R ^test_
+      - uses: actions/upload-artifact@v2
+        with:
+          name: libsrcmlTest.${{ matrix.distribution }}.log
+          path: build/Testing/Temporary/LastTest.log
 
-      # - name: Run Installed srcml
-      #   shell: bash
-      #   working-directory: build
-      #   run: |
-      #     srcml --version
-      #     srcml --text="int a;" -l C++
+      - name: Generate Parser Tests
+        shell: bash
+        working-directory: build
+        run: |
+          cmake .. -DBUILD_PARSER_TESTS=ON
+          cmake --build . --config Release --target gen_parser_tests
 
-      # - name: Ubuntu/macOS Client Tests on Installed srcml
-      #   if: ${{ matrix.os != 'windows-latest' }}
-      #   shell: bash
-      #   working-directory: build
-      #   continue-on-error: true
-      #   run: |
-      #     ctest -VV
-      # - uses: actions/upload-artifact@v2
-      #   with:
-      #     name: ClientTest.${{ runner.os }}.log
-      #     path: build/Testing/Temporary/LastTest.log
+      - name: Run Parser Tests
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          srcml --dev --parser-test test/parser/testsuite | tee ParserTest.log
 
-      # - name: Build libsrcml Tests
-      #   shell: bash
-      #   working-directory: build
-      #   continue-on-error: true
-      #   run: |
-      #     export UseMultiToolTask=true
-      #     cmake .. -DBUILD_LIBSRCML_TESTS=ON
-      #     cmake --build . --config Release --target build_libsrcml_tests
-
-      # - name: Run libsrcml Tests on Installed libsrcml
-      #   shell: bash
-      #   working-directory: build
-      #   continue-on-error: true
-      #   run: |
-      #     ctest -C Release -R ^test_
-      # - uses: actions/upload-artifact@v2
-      #   with:
-      #     name: libsrcmlTest.${{ runner.os }}.log
-      #     path: build/Testing/Temporary/LastTest.log
-
-      # - name: Generate Parser Tests
-      #   shell: bash
-      #   working-directory: build
-      #   run: |
-      #     cmake .. -DBUILD_PARSER_TESTS=ON
-      #     cmake --build . --config Release --target gen_parser_tests
-
-      # - name: Run Parser Tests
-      #   shell: bash
-      #   working-directory: build
-      #   continue-on-error: true
-      #   run: |
-      #     srcml --parser-test test/parser/testsuite | tee ParserTest.log
-
-      # - uses: actions/upload-artifact@v2
-      #   with:
-      #     name: ParserTest.${{ runner.os }}.log
-      #     path: build/ParserTest.log
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ParserTest.${{ matrix.distribution }}.log
+          path: build/ParserTest.log
