Quote distribution names

--- a/.github/workflows/TestFedora.yml
+++ b/.github/workflows/TestFedora.yml
@@ -7,11 +7,104 @@ jobs:
   package:
     strategy:
       matrix:
-        distribution: [rawhide, 35, latest, 34, 33, 32]
+        distribution: ["fedora:rawhide", "fedora:35", "fedora:latest", "fedora:34", "fedora:33", "fedora:32"]
     runs-on: ubuntu-latest
-    container: srcml/fedora:${{ matrix.distribution }}
+    container: srcml/${{ matrix.distribution }}
     timeout-minutes: 10
     steps:
 
       - name: Checkout Repository
         uses: actions/checkout@v2
+
+      - name: OS Version
+        shell: bash
+        run: |
+          cat /etc/os-release
+
+      - name: Create build directory
+        shell: bash
+        run: mkdir build
+
+      - name: CMake Setup
+        shell: bash
+        working-directory: build
+        run: |
+          cmake .. -G Ninja
+
+      - name: Build
+        shell: bash
+        working-directory: build
+        run: |
+          ninja
+
+      - name: Package
+        shell: bash
+        working-directory: build
+        run: |
+          cpack -G RPM
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: FedoraDist
+          path: build/dist/*.rpm
+
+      - name: Install using packages
+        shell: bash
+        run: |
+          dnf install -y build/dist/*.rpm
+
+      - name: Run Installed srcml
+        shell: bash
+        working-directory: build
+        run: |
+          srcml --version
+          srcml --text="int a;" -l C++
+
+      - name: Client Tests on Installed srcml
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          ctest -VV
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ClientTest.${{ matrix.distribution }}.log
+          path: build/Testing/Temporary/LastTest.log
+
+      - name: Build libsrcml Tests
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          cmake .. -DBUILD_LIBSRCML_TESTS=ON
+          cmake --build . --config Release --target build_libsrcml_tests
+
+      - name: Run libsrcml Tests on Installed libsrcml
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          ctest -R ^test_
+      - uses: actions/upload-artifact@v2
+        with:
+          name: libsrcmlTest.${{ matrix.distribution }}.log
+          path: build/Testing/Temporary/LastTest.log
+
+      - name: Generate Parser Tests
+        shell: bash
+        working-directory: build
+        run: |
+          cmake .. -DBUILD_PARSER_TESTS=ON
+          cmake --build . --config Release --target gen_parser_tests
+
+      - name: Run Parser Tests
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          srcml --dev --parser-test test/parser/testsuite | tee ParserTest.log
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ParserTest.${{ matrix.distribution }}.log
+          path: build/ParserTest.log
