--- a/.github/workflows/TestFedora.yml
+++ b/.github/workflows/TestFedora.yml
@@ -20,6 +20,8 @@ jobs:
         shell: bash
         run: |
           cat /etc/os-release
+          export VALUE=$(echo ${{ matrix.distribution }} | tr ':' '-')
+          echo "LABEL=$VALUE" >> $GITHUB_ENV
 
       - name: Create build directory
         shell: bash
@@ -68,7 +70,7 @@ jobs:
           ctest -VV
       - uses: actions/upload-artifact@v2
         with:
-          name: ClientTest.${{ matrix.distribution }}.log
+          name: ClientTest.${{ $VALUE }}.log
           path: build/Testing/Temporary/LastTest.log
 
       - name: Build libsrcml Tests
@@ -87,7 +89,7 @@ jobs:
           ctest -R ^test_
       - uses: actions/upload-artifact@v2
         with:
-          name: libsrcmlTest.${{ matrix.distribution }}.log
+          name: libsrcmlTest.${{ $VALUE }}.log
           path: build/Testing/Temporary/LastTest.log
 
       - name: Generate Parser Tests
@@ -106,5 +108,5 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: ParserTest.${{ matrix.distribution }}.log
+          name: ParserTest.${{ $VALUE }}.log
           path: build/ParserTest.log
