--- a/.github/workflows/TestFedora.yml
+++ b/.github/workflows/TestFedora.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Install using packages
         shell: bash
         run: |
-          dnf --cacheonly install -y build/dist/srcml*.rpm
+          dnf install -y build/dist/srcml*.rpm
 
       - name: Run Installed srcml
         shell: bash
