--- a/.github/workflows/TestUbuntu.yml
+++ b/.github/workflows/TestUbuntu.yml
@@ -5,6 +5,7 @@ on: workflow_dispatch
 
 jobs:
   package:
+    continue-on-error: true
     strategy:
       matrix:
         distribution: ["ubuntu:18.04", "ubuntu:20.04", "ubuntu:20.10", "ubuntu:21.04", "ubuntu:21.10"]
