--- a/.github/workflows/TestUbuntu.yml
+++ b/.github/workflows/TestUbuntu.yml
@@ -8,7 +8,14 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        distribution: ["ubuntu:18.04", "ubuntu:20.04", "ubuntu:20.10", "ubuntu:21.04", "ubuntu:21.10"]
+        distribution:
+          - "ubuntu:21.10"
+          - "ubuntu:21.04"
+          - "ubuntu:20.10"
+          - "ubuntu:20.04"
+          - "ubuntu:18.04"
+          - "ubuntu:16.04"
+          - "ubuntu:14.04"
     runs-on: ubuntu-latest
     container: srcml/${{ matrix.distribution }}
     timeout-minutes: 10
