Add centos builds to Test Fedora action

--- a/.github/workflows/TestFedora.yml
+++ b/.github/workflows/TestFedora.yml
@@ -7,7 +7,7 @@ jobs:
   package:
     strategy:
       matrix:
-        distribution: ["fedora:rawhide", "fedora:35", "fedora:latest", "fedora:34", "fedora:33", "fedora:32"]
+        distribution: ["fedora:rawhide", "fedora:35", "fedora:latest", "fedora:34", "fedora:33", "fedora:32", "centos:7", "centos:8"]
     runs-on: ubuntu-latest
     container: srcml/${{ matrix.distribution }}
     timeout-minutes: 10
